--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "becauses",
         "combinaison",
         "Holberton",
         "ibase",
+        "messsage",
         "obase",
+        "SPOF",
         "TRUEKNOWLEDGE",
         "unalias"
     ]
