--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "combinaison",
         "Holberton",
         "ibase",
+        "keygen",
         "messsage",
         "obase",
         "SPOF",
